[package]
name = "connector-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "*"
sql-query-connector = { path = "../connectors/sql-query-connector" }
schema = { path = "../schema" }
psl.workspace = true
request-handlers = { path = "../request-handlers" }
