[package]
name = "connector-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
sql-query-connector = { path = "../connectors/sql-query-connector" }
schema = { path = "../schema" }
psl.workspace = true
request-handlers = { path = "../request-handlers" }
query-core = { path = "../core" }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
